--- a/meth.html
+++ b/meth.html
@@ -3,139 +3,112 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Godown Management</title>
+    <title>Stock Update Dashboard</title>
     <style>
         body {
             font-family: Arial, sans-serif;
+            background: linear-gradient(120deg, #f5f5f5, #e0e0e0);
             margin: 0;
             padding: 20px;
-            background-image: url('your-background-image.jpg'); /* Replace with your image file */
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
         }
         .container {
-            max-width: 1200px;
+            max-width: 800px;
             margin: auto;
-            background: rgba(255, 255, 255, 0.9); /* Slightly transparent background */
+            background: #fff;
             padding: 20px;
-            border-radius: 15px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         }
         h1 {
             text-align: center;
-            color: #2c3e50; /* Dark blue-grey color */
-            margin-bottom: 30px;
+            color: #333;
         }
-        .godown {
+        .barcode-input {
+            display: block;
+            width: 100%;
+            padding: 10px;
+            font-size: 16px;
+            margin-bottom: 20px;
+            border: 2px solid #3498db;
+            border-radius: 5px;
+            outline: none;
+        }
+        .stock-info {
             margin-top: 20px;
             padding: 15px;
-            background: #e3f2fd; /* Light blue */
-            border-radius: 10px;
-            margin-bottom: 15px;
+            background: #f9f9f9;
+            border-radius: 8px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
         }
-        .godown h2 {
-            color: #34495e;
-            border-bottom: 2px solid #ccc;
-            padding-bottom: 10px;
-        }
-        .inventory-table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 10px;
-        }
-        .inventory-table th, .inventory-table td {
-            padding: 12px;
-            border: 1px solid #ddd;
-            text-align: left;
-        }
-        .inventory-table th {
-            background-color: #2c3e50; /* Dark blue-grey */
-            color: white;
-        }
-        .inventory-table td {
-            background-color: #f9f9f9;
-        }
-        .low-stock {
-            color: #e74c3c; /* Red */
-            font-weight: bold;
-        }
-        .in-stock {
-            color: #2ecc71; /* Green */
-            font-weight: bold;
+        .stock-info p {
+            margin: 5px 0;
+            color: #555;
         }
     </style>
 </head>
 <body>
 
 <div class="container">
-    <h1>Godown Management System</h1>
-
-    <!-- Godown Details -->
-    <div class="godown">
-        <h2>Central Godown</h2>
-        <table class="inventory-table">
-            <tr>
-                <th>Drug Name</th>
-                <th>Stock Quantity</th>
-                <th>Date of Arrival</th>
-                <th>Expiry Date</th>
-                <th>Status</th>
-            </tr>
-            <tr>
-                <td>Drug A</td>
-                <td>150</td>
-                <td>15th September 2024</td>
-                <td>30th September 2024</td>
-                <td><span class="low-stock">Low Stock</span></td>
-            </tr>
-            <tr>
-                <td>Drug B</td>
-                <td>500</td>
-                <td>5th October 2024</td>
-                <td>15th November 2024</td>
-                <td><span class="in-stock">In Stock</span></td>
-            </tr>
-            <tr>
-                <td>Drug C</td>
-                <td>75</td>
-                <td>20th September 2024</td>
-                <td>1st October 2024</td>
-                <td><span class="low-stock">Low Stock</span></td>
-            </tr>
-            <tr>
-                <td>Drug D</td>
-                <td>300</td>
-                <td>1st November 2024</td>
-                <td>12th December 2024</td>
-                <td><span class="in-stock">In Stock</span></td>
-            </tr>
-            <tr>
-                <td>Drug E</td>
-                <td>200</td>
-                <td>10th December 2024</td>
-                <td>25th January 2025</td>
-                <td><span class="in-stock">In Stock</span></td>
-            </tr>
-            <tr>
-                <td>Drug F</td>
-                <td>50</td>
-                <td>5th February 2025</td>
-                <td>18th February 2025</td>
-                <td><span class="low-stock">Low Stock</span></td>
-            </tr>
-            <tr>
-                <td>Drug G</td>
-                <td>400</td>
-                <td>25th February 2025</td>
-                <td>20th March 2025</td>
-                <td><span class="in-stock">In Stock</span></td>
-            </tr>
-        </table>
+    <h1>Stock Update Dashboard</h1>
+    <input type="text" id="barcodeInput" class="barcode-input" placeholder="Scan or enter barcode">
+    <div class="stock-info" id="stockInfo">
+        <p><strong>Product Name:</strong> <span id="productName">N/A</span></p>
+        <p><strong>Current Stock:</strong> <span id="currentStock">N/A</span></p>
+        <p><strong>Updated Stock:</strong> <span id="updatedStock">N/A</span></p>
     </div>
-
 </div>
 
+<script>
+    // Function to simulate fetching and updating stock
+    function fetchAndUpdateStock(barcode) {
+        // Simulate an API call
+        return new Promise((resolve) => {
+            // Mock data
+            const mockData = {
+                "123456789": { name: "Drug A", stock: 50 },
+                "987654321": { name: "Drug B", stock: 30 }
+            };
+
+            setTimeout(() => {
+                resolve(mockData[barcode] || null);
+            }, 500); // Simulate network delay
+        });
+    }
+
+    // Event listener for barcode input
+    document.getElementById('barcodeInput').addEventListener('input', function() {
+        const barcode = this.value.trim();
+        
+        if (barcode.length > 0) {
+            fetchAndUpdateStock(barcode).then(data => {
+                if (data) {
+                    document.getElementById('productName').textContent = data.name;
+                    document.getElementById('currentStock').textContent = data.stock;
+                    
+                    // Example: Increase stock by 10 units
+                    const newStock = data.stock + 10;
+                    document.getElementById('updatedStock').textContent = newStock;
+
+                    // Simulate sending updated stock to server
+                    // fetch('/updateStock', {
+                    //     method: 'POST',
+                    //     body: JSON.stringify({ barcode: barcode, stock: newStock }),
+                    //     headers: { 'Content-Type': 'application/json' }
+                    // }).then(response => response.json()).then(data => {
+                    //     console.log('Stock updated successfully:', data);
+                    // }).catch(error => {
+                    //     console.error('Error updating stock:', error);
+                    // });
+                } else {
+                    alert('Product not found!');
+                    document.getElementById('productName').textContent = 'N/A';
+                    document.getElementById('currentStock').textContent = 'N/A';
+                    document.getElementById('updatedStock').textContent = 'N/A';
+                }
+            });
+        }
+    });
+</script>
+
 </body>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </html>
